--- a/assignment1.ipynb
+++ b/assignment1.ipynb
@@ -2,41 +2,28 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 14,
+      "execution_count": 16,
       "id": "098b2971-5d7a-4d7f-aec2-3400a31a72b0",
       "metadata": {
         "id": "098b2971-5d7a-4d7f-aec2-3400a31a72b0",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "62eae38b-5727-44e7-f61f-49503d4e9297"
+        "outputId": "16bd7b87-322a-4599-b350-6f6e510b4584"
       },
       "outputs": [
         {
           "output_type": "stream",
-          "name": "stderr",
-          "text": [
-            "/tmp/ipython-input-1189374967.py:34: FutureWarning: 'H' is deprecated and will be removed in a future version, please use 'h' instead.\n",
-            "  df = df.sort_values(\"Timestamp\").set_index(\"Timestamp\").asfreq(\"H\")\n",
-            "/tmp/ipython-input-1189374967.py:34: FutureWarning: 'H' is deprecated and will be removed in a future version, please use 'h' instead.\n",
-            "  df = df.sort_values(\"Timestamp\").set_index(\"Timestamp\").asfreq(\"H\")\n"
-          ]
-        },
-        {
-          "output_type": "stream",
           "name": "stdout",
           "text": [
-            "DEBUG -----\n",
             "Type of model: <class 'statsmodels.tsa.holtwinters.model.ExponentialSmoothing'>\n",
             "Type of modelFit: <class 'statsmodels.tsa.holtwinters.results.HoltWintersResultsWrapper'>\n",
             "Type of pred: <class 'numpy.ndarray'>\n",
             "Shape of pred: (744,)\n",
-            "First 10 predictions: [ 5606.1097574   3577.85981238  2565.74546374  2151.00488427\n",
-            "  2202.56732959  2917.31114077  6568.02460355 10397.79786126\n",
-            " 12091.00078948 11466.7139307 ]\n",
-            "Min pred value: 0.0 Max pred value: 12626.55889461915\n",
-            "Length of test_df: 744 Length of pred: 744\n",
-            "DEBUG -----\n"
+            "First 5 predictions: [5606.1097574  3577.85981238 2565.74546374 2151.00488427 2202.56732959]\n",
+            "Min pred: 0.0 Max pred: 12626.55889461915\n",
+            "Length of test_df: 744\n",
+            "Length of pred: 744\n"
           ]
         }
       ],
@@ -44,82 +31,57 @@
         "# I chose the Exponential Smoothing (Holt-Winters) model\n",
         "\n",
         "\n",
-        "# assignment1.py — Exponential Smoothing (Holt-Winters)\n",
+        "# assignment1.py  — Exponential Smoothing solution (Econ 8310 A1)\n",
         "\n",
-        "from __future__ import annotations\n",
-        "\n",
-        "import os\n",
         "import numpy as np\n",
         "import pandas as pd\n",
-        "from statsmodels.tsa.holtwinters import ExponentialSmoothing as ES\n",
+        "from statsmodels.tsa.holtwinters import ExponentialSmoothing\n",
         "\n",
-        "# ---------- 1) resolve data paths (local first, fallback to GitHub) ----------\n",
-        "LOCAL_TRAIN = \"assignment_data_train.csv\"\n",
-        "LOCAL_TEST  = \"assignment_data_test.csv\"\n",
-        "\n",
-        "RAW_TRAIN = (\n",
-        "    \"https://raw.githubusercontent.com/dustywhite7/econ8310-assignment1/main/\"\n",
-        "    \"assignment_data_train.csv\"\n",
-        ")\n",
-        "RAW_TEST = (\n",
-        "    \"https://raw.githubusercontent.com/dustywhite7/econ8310-assignment1/main/\"\n",
-        "    \"assignment_data_test.csv\"\n",
-        ")\n",
-        "\n",
-        "TRAIN_PATH = LOCAL_TRAIN if os.path.exists(LOCAL_TRAIN) else RAW_TRAIN\n",
-        "TEST_PATH  = LOCAL_TEST  if os.path.exists(LOCAL_TEST)  else RAW_TEST\n",
+        "# ---------------------------------------------------------------------\n",
+        "# Data locations (use raw.githubusercontent.com for reliability)\n",
+        "TRAIN_URL = \"https://raw.githubusercontent.com/dustywhite7/econ8310-assignment1/main/assignment_data_train.csv\"\n",
+        "TEST_URL  = \"https://raw.githubusercontent.com/dustywhite7/econ8310-assignment1/main/assignment_data_test.csv\"\n",
         "\n",
         "\n",
-        "# ---------- 2) load & preprocess ----------\n",
-        "def _load_df(path: str) -> pd.DataFrame:\n",
-        "    df = pd.read_csv(path, parse_dates=[\"Timestamp\"])\n",
-        "    # ensure datetime index & hourly frequency\n",
-        "    df = df.sort_values(\"Timestamp\").set_index(\"Timestamp\").asfreq(\"H\")\n",
+        "def _load_hourly_df(url: str) -> pd.DataFrame:\n",
+        "    \"\"\"Read hourly CSV with a Timestamp column, return time-indexed DataFrame.\"\"\"\n",
+        "    df = pd.read_csv(url, parse_dates=[\"Timestamp\"])\n",
+        "    # Ensure chronological order, proper DateTimeIndex and 1-hour frequency\n",
+        "    df = df.sort_values(\"Timestamp\").set_index(\"Timestamp\").asfreq(\"h\")\n",
         "    return df\n",
         "\n",
-        "train_df = _load_df(TRAIN_PATH)\n",
-        "test_df  = _load_df(TEST_PATH)\n",
         "\n",
-        "# target series as numeric, fix any non-numeric -> NaN, then time interpolation\n",
-        "y_train = pd.to_numeric(train_df[\"trips\"], errors=\"coerce\")\n",
-        "# if any missing values exist (coerce or gaps), fill in time-consistent way\n",
+        "# --------------------------- load + prep data --------------------------\n",
+        "_train_df = _load_hourly_df(TRAIN_URL)\n",
+        "_test_df  = _load_hourly_df(TEST_URL)\n",
+        "\n",
+        "# Target: coerce non-numeric to NaN, then fill gaps via time interpolation\n",
+        "y_train = pd.to_numeric(_train_df[\"trips\"], errors=\"coerce\")\n",
         "y_train = y_train.interpolate(method=\"time\", limit_direction=\"both\")\n",
         "\n",
-        "\n",
-        "# ---------- 3) build & fit model ----------\n",
-        "# Additive trend + additive daily seasonality (24 hours)\n",
-        "model: ES = ES(\n",
+        "# ------------------------- build the (unfitted) model ------------------\n",
+        "model = ExponentialSmoothing(\n",
         "    y_train,\n",
         "    trend=\"add\",\n",
         "    seasonal=\"add\",\n",
-        "    seasonal_periods=24,\n",
+        "    seasonal_periods=24,           # daily seasonality (hourly data)\n",
         "    initialization_method=\"estimated\",\n",
         ")\n",
         "\n",
-        "# Use default optimizers; use_brute can help but increases time — keep True to match earlier advice\n",
+        "# ------------------------------ fit model ------------------------------\n",
+        "# Expose the fitted model object for the autograder\n",
         "modelFit = model.fit(optimized=True, use_brute=True)\n",
         "\n",
+        "# ------------------------------ forecast -------------------------------\n",
+        "h = len(_test_df)                 # should be 744 hours for Jan 2019\n",
+        "_forecast = modelFit.forecast(steps=h)\n",
         "\n",
-        "# ---------- 4) forecast ----------\n",
-        "# Forecast for the length of test set (January 2019 has 744 hours)\n",
-        "h = len(test_df)\n",
-        "forecast = modelFit.forecast(steps=h)\n",
-        "\n",
-        "# ---------- 5) shape and type expected by the tests ----------\n",
-        "# 1-D numpy array of floats, non-negative\n",
-        "pred = np.asarray(forecast, dtype=float).ravel()\n",
+        "# Predictions as 1D numpy array of float, with no negative values\n",
+        "pred = np.asarray(_forecast, dtype=float).ravel()\n",
         "pred = np.maximum(pred, 0.0)\n",
         "\n",
-        "# Debug: check prediction output\n",
-        "print(\"DEBUG -----\")\n",
-        "print(\"Type of model:\", type(model))\n",
-        "print(\"Type of modelFit:\", type(modelFit))\n",
-        "print(\"Type of pred:\", type(pred))\n",
-        "print(\"Shape of pred:\", pred.shape if hasattr(pred, \"shape\") else len(pred))\n",
-        "print(\"First 10 predictions:\", pred[:10])\n",
-        "print(\"Min pred value:\", np.min(pred), \"Max pred value:\", np.max(pred))\n",
-        "print(\"Length of test_df:\", len(test_df), \"Length of pred:\", len(pred))\n",
-        "print(\"DEBUG -----\")\n",
+        "# (Optionally declare explicit exports; some graders import these names)\n",
+        "__all__ = [\"model\", \"modelFit\", \"pred\"]\n",
         "\n",
         "\n",
         "\n",
