--- a/assignment1.ipynb
+++ b/assignment1.ipynb
@@ -2,28 +2,24 @@
   "cells": [
     {
       "cell_type": "code",
-      "execution_count": 16,
+      "execution_count": 18,
       "id": "098b2971-5d7a-4d7f-aec2-3400a31a72b0",
       "metadata": {
         "id": "098b2971-5d7a-4d7f-aec2-3400a31a72b0",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "16bd7b87-322a-4599-b350-6f6e510b4584"
+        "outputId": "284ab6a7-d9f8-48b2-fdc1-9322ea50f3c9"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Type of model: <class 'statsmodels.tsa.holtwinters.model.ExponentialSmoothing'>\n",
-            "Type of modelFit: <class 'statsmodels.tsa.holtwinters.results.HoltWintersResultsWrapper'>\n",
-            "Type of pred: <class 'numpy.ndarray'>\n",
-            "Shape of pred: (744,)\n",
-            "First 5 predictions: [5606.1097574  3577.85981238 2565.74546374 2151.00488427 2202.56732959]\n",
-            "Min pred: 0.0 Max pred: 12626.55889461915\n",
-            "Length of test_df: 744\n",
-            "Length of pred: 744\n"
+            "Train shape: (8760, 5)\n",
+            "Test shape: (744, 5)\n",
+            "Prediction length: 744\n",
+            "First 5 predictions: [5606.1097574  3577.85981238 2565.74546374 2151.00488427 2202.56732959]\n"
           ]
         }
       ],
@@ -31,61 +27,57 @@
         "# I chose the Exponential Smoothing (Holt-Winters) model\n",
         "\n",
         "\n",
-        "# assignment1.py  — Exponential Smoothing solution (Econ 8310 A1)\n",
-        "\n",
-        "import numpy as np\n",
+        "import os\n",
         "import pandas as pd\n",
+        "import numpy as np\n",
         "from statsmodels.tsa.holtwinters import ExponentialSmoothing\n",
         "\n",
-        "# ---------------------------------------------------------------------\n",
-        "# Data locations (use raw.githubusercontent.com for reliability)\n",
-        "TRAIN_URL = \"https://raw.githubusercontent.com/dustywhite7/econ8310-assignment1/main/assignment_data_train.csv\"\n",
-        "TEST_URL  = \"https://raw.githubusercontent.com/dustywhite7/econ8310-assignment1/main/assignment_data_test.csv\"\n",
+        "train_file = \"assignment_data_train.csv\"\n",
+        "test_file = \"assignment_data_test.csv\"\n",
         "\n",
+        "train_url = \"https://raw.githubusercontent.com/dustywhite7/econ8310-assignment1/main/assignment_data_train.csv\"\n",
+        "test_url = \"https://raw.githubusercontent.com/dustywhite7/econ8310-assignment1/main/assignment_data_test.csv\"\n",
         "\n",
-        "def _load_hourly_df(url: str) -> pd.DataFrame:\n",
-        "    \"\"\"Read hourly CSV with a Timestamp column, return time-indexed DataFrame.\"\"\"\n",
-        "    df = pd.read_csv(url, parse_dates=[\"Timestamp\"])\n",
-        "    # Ensure chronological order, proper DateTimeIndex and 1-hour frequency\n",
-        "    df = df.sort_values(\"Timestamp\").set_index(\"Timestamp\").asfreq(\"h\")\n",
-        "    return df\n",
+        "# Load train\n",
+        "if os.path.exists(train_file):\n",
+        "    train_df = pd.read_csv(train_file, parse_dates=[\"Timestamp\"])\n",
+        "else:\n",
+        "    train_df = pd.read_csv(train_url, parse_dates=[\"Timestamp\"])\n",
         "\n",
+        "# Load test\n",
+        "if os.path.exists(test_file):\n",
+        "    test_df = pd.read_csv(test_file, parse_dates=[\"Timestamp\"])\n",
+        "else:\n",
+        "    test_df = pd.read_csv(test_url, parse_dates=[\"Timestamp\"])\n",
         "\n",
-        "# --------------------------- load + prep data --------------------------\n",
-        "_train_df = _load_hourly_df(TRAIN_URL)\n",
-        "_test_df  = _load_hourly_df(TEST_URL)\n",
+        "# Preprocess\n",
+        "train_df = train_df.sort_values(\"Timestamp\").set_index(\"Timestamp\").asfreq(\"h\")\n",
+        "y_train = pd.to_numeric(train_df[\"trips\"], errors=\"coerce\").interpolate(method=\"time\")\n",
         "\n",
-        "# Target: coerce non-numeric to NaN, then fill gaps via time interpolation\n",
-        "y_train = pd.to_numeric(_train_df[\"trips\"], errors=\"coerce\")\n",
-        "y_train = y_train.interpolate(method=\"time\", limit_direction=\"both\")\n",
-        "\n",
-        "# ------------------------- build the (unfitted) model ------------------\n",
+        "# Model\n",
         "model = ExponentialSmoothing(\n",
         "    y_train,\n",
         "    trend=\"add\",\n",
         "    seasonal=\"add\",\n",
-        "    seasonal_periods=24,           # daily seasonality (hourly data)\n",
-        "    initialization_method=\"estimated\",\n",
+        "    seasonal_periods=24,\n",
+        "    initialization_method=\"estimated\"\n",
         ")\n",
         "\n",
-        "# ------------------------------ fit model ------------------------------\n",
-        "# Expose the fitted model object for the autograder\n",
+        "# Fit\n",
         "modelFit = model.fit(optimized=True, use_brute=True)\n",
         "\n",
-        "# ------------------------------ forecast -------------------------------\n",
-        "h = len(_test_df)                 # should be 744 hours for Jan 2019\n",
-        "_forecast = modelFit.forecast(steps=h)\n",
+        "# Forecast\n",
+        "h = len(test_df)\n",
+        "forecast = modelFit.forecast(steps=h)\n",
         "\n",
-        "# Predictions as 1D numpy array of float, with no negative values\n",
-        "pred = np.asarray(_forecast, dtype=float).ravel()\n",
-        "pred = np.maximum(pred, 0.0)\n",
+        "pred = np.asarray(forecast, dtype=float).ravel()\n",
+        "pred = np.maximum(pred, 0)\n",
         "\n",
-        "# (Optionally declare explicit exports; some graders import these names)\n",
-        "__all__ = [\"model\", \"modelFit\", \"pred\"]\n",
-        "\n",
-        "\n",
-        "\n",
-        "\n"
+        "# Debug / check (only in ipynb)\n",
+        "print(\"Train shape:\", train_df.shape)\n",
+        "print(\"Test shape:\", test_df.shape)\n",
+        "print(\"Prediction length:\", len(pred))\n",
+        "print(\"First 5 predictions:\", pred[:5])\n"
       ]
     }
   ],
