--- a/assignment1.ipynb
+++ b/assignment1.ipynb
@@ -88,11 +88,11 @@
         "\n"
       ],
       "metadata": {
-        "id": "_krKcePKwoWp",
-        "outputId": "3d9037de-f83d-49fa-cfa0-9550efb1d503",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "_krKcePKwoWp",
+        "outputId": "3d9037de-f83d-49fa-cfa0-9550efb1d503"
       },
       "id": "_krKcePKwoWp",
       "execution_count": 28,
@@ -120,57 +120,54 @@
         "from statsmodels.tsa.holtwinters import ExponentialSmoothing\n",
         "\n",
         "# 1) Load\n",
-        "train_df = pd.read_csv(\"assignment_data_train.csv\")\n",
-        "test_df  = pd.read_csv(\"assignment_data_test.csv\")\n",
+        "train_df = pd.read_csv(\"assignment_data_train.csv\", parse_dates=[\"Timestamp\"])\n",
+        "test_df  = pd.read_csv(\"assignment_data_test.csv\",  parse_dates=[\"Timestamp\"])\n",
         "\n",
-        "# 2) Prepare data\n",
-        "train_df[\"Timestamp\"] = pd.to_datetime(train_df[\"Timestamp\"], errors=\"coerce\")\n",
-        "test_df[\"Timestamp\"]  = pd.to_datetime(test_df[\"Timestamp\"], errors=\"coerce\")\n",
-        "\n",
+        "# 2) Prep\n",
         "train_df = train_df.sort_values(\"Timestamp\").set_index(\"Timestamp\").asfreq(\"h\")\n",
         "test_df  = test_df.sort_values(\"Timestamp\").set_index(\"Timestamp\").asfreq(\"h\")\n",
         "\n",
-        "train_y = pd.to_numeric(train_df[\"trips\"], errors=\"coerce\")\n",
-        "train_y = train_y.interpolate(method=\"time\").ffill().bfill()\n",
+        "y_train = pd.to_numeric(train_df[\"trips\"], errors=\"coerce\")\n",
+        "y_train = y_train.interpolate(method=\"time\", limit_direction=\"both\").astype(float)\n",
         "\n",
-        "#3) Train model\n",
+        "# 3) Model (weekly seasonality)\n",
         "model = ExponentialSmoothing(\n",
-        "    train_y,\n",
+        "    y_train,\n",
         "    trend=\"add\",\n",
+        "    damped_trend=True,\n",
         "    seasonal=\"add\",\n",
-        "    seasonal_periods=24,\n",
+        "    seasonal_periods=168,\n",
         "    initialization_method=\"estimated\"\n",
         ")\n",
+        "\n",
+        "# 4) Fit\n",
         "modelFit = model.fit(optimized=True, use_brute=True)\n",
         "\n",
-        "# 4) Forecast\n",
+        "# 5) Forecast\n",
         "h = len(test_df)\n",
         "forecast = modelFit.forecast(steps=h)\n",
         "\n",
-        "pred = np.maximum(np.asarray(forecast, dtype=float).ravel(), 0.0)\n",
-        "\n",
-        "# Debug\n",
-        "print(\"Train shape:\", train_df.shape, \"Test shape:\", test_df.shape)\n",
-        "print(\"Prediction length:\", len(pred))\n",
-        "print(\"First 5 predictions:\", pred[:5])\n"
+        "# 6) Contract for autograder\n",
+        "pred = np.asarray(forecast, dtype=float).ravel()\n",
+        "pred = np.maximum(pred, 0.0)\n"
       ],
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "u-_t7R7yob5I",
-        "outputId": "724b2815-cc7f-4aec-f6c8-64abf65b7a7d"
+        "outputId": "6c1a2498-0542-4e49-ffee-8e509ddf3cdc"
       },
       "id": "u-_t7R7yob5I",
-      "execution_count": 30,
+      "execution_count": 31,
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "Train shape: (8760, 5) Test shape: (744, 4)\n",
+            "Train shape: (8760, 5) | Test shape: (744, 4)\n",
             "Prediction length: 744\n",
-            "First 5 predictions: [5606.1097574  3577.85981238 2565.74546374 2151.00488427 2202.56732959]\n"
+            "First 5 predictions: [4895.00823356 2455.68666431 1342.61929383  945.63071185 1297.2479594 ]\n"
           ]
         }
       ]
